objects/Produto_Concorr_ncia__c.object
<CustomObject>
    <fields>
        <fullName>Ativa_o__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ativação</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
                <value>
                    <fullName>Indireto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_de_visita__c</fullName>
        <description>Identifica o checklist responsável pelos produtos da concorrência.</description>
        <label>Checklist de visita</label>
        <referenceTo>Checklist_de_visita__c</referenceTo>
        <relationshipLabel>Produtos Pernod Ricard e Concorrência</relationshipLabel>
        <relationshipName>Produtos_Concorr_ncia</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentários</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confinado_Concorrente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confinado Concorrente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confinado_Pernod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confinado Pernod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fora_do_Range_Demantra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fora do Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Key__c</fullName>
        <description>Field used for Reporte 4 that is completed by the class LAT_BR_UpdatesKeyOfPPC with the following value:
RecordTypeId | Produto_PERNOD__r.LAT_BR_BrandGrouping__c | Checklist_de_Visita__r.Visita__r.RecordTypeId | Checklist_de_Visita__r.Visita__r.Conta__c | Checklist_de_Visita__r.Visita__r.Planejamento__r.LAT_MonthYear__c
This field is only completed if all the keys are not null, Qtde_de_Caixas_Estoque__c &gt; 0 and Checklist_de_Visita__r.LAT_BR_ValidOnTradeChecklist__c is TRUE</description>
        <externalId>true</externalId>
        <label>LAT Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto PERNOD</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipName>LAT_Produtos_Concorr_ncia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nao_se_aplica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Positivado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perc_Dose__c</fullName>
        <formula>( Pre_o_Dose_Pernod__c -  Pre_o_Dose_Concorrente__c ) / Pre_o_Dose_Concorrente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Dose</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Perc_Garrafa__c</fullName>
        <formula>( Pre_o_Garrafa_Pernod__c -  Pre_o_garrafa_Concorrente__c ) / Pre_o_garrafa_Concorrente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Garrafa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pre_o_Dose_Concorrente__c</fullName>
        <label>$ Dose Concorrente</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_o_Dose_Pernod__c</fullName>
        <label>$ Dose PRB</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_o_Garrafa_Pernod__c</fullName>
        <label>$ Garrafa</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_o_garrafa_Concorrente__c</fullName>
        <label>$ Garrafa Concorrente</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Produto_Concorrente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Concorrente</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipName>Produtos_Concorr_ncia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produto_PERNOD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto PERNOD</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Produtos_Concorr_ncia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produto__c</fullName>
        <label>Produto Pernod</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_o__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promoção</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qtde_de_Caixas_Compra__c</fullName>
        <label># CA Compra</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtde_de_Caixas_Estoque__c</fullName>
        <label># Garrafas Sell Out</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtde_de_Frentes_Concorrencia__c</fullName>
        <label># Frentes Concorrência</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtde_de_Frentes_Pernod__c</fullName>
        <label># Frentes PRB</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtde_de_Pontos_Concorrencia__c</fullName>
        <label># Ponto Extra Concorrência</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtde_de_Pontos_Pernod__c</fullName>
        <label># Ponto Extra PRB</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range_Demantra_AT__c</fullName>
        <label>Range Demantra (ATÉ)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Range_Demantra_DE__c</fullName>
        <label>Range Demantra (DE)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regi_o__c</fullName>
        <label>Região</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sul</fullName>
                </value>
                <value>
                    <fullName>Leste</fullName>
                </value>
                <value>
                    <fullName>Norte</fullName>
                </value>
                <value>
                    <fullName>Oeste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipName>Produtos_Concorr_ncia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_fora_do_Range__c</fullName>
        <description>Quantifica se o produto está fora do range de preços definido no sistema DEMANTRA. Os valores serão 1 para fora do range e 0 para dentro do range.</description>
        <label>Valor fora do Range</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label># Garrafas/Mês</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>teste_status_visita__c</fullName>
        <formula>Checklist_de_visita__r.Status_da_Visita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>teste status visita</label>
        <type>Text</type>
    </fields>
    <label>Produto Pernod Ricard e Concorrência</label>
    <nameField>
        <displayFormat>Comparação-{000000}</displayFormat>
        <label>Comparação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos Pernod Ricard e Concorrência</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPR_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPR_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Nao_alterar_precos_dos_Produtos</fullName>
        <active>false</active>
        <description>Não alterar nenhuma informação deste objeto quando o status da visita = encerrado.</description>
        <errorConditionFormula>priorvalue( teste_status_visita__c ) = &quot;Encerrada&quot;</errorConditionFormula>
        <errorDisplayField>Qtde_de_Caixas_Compra__c</errorDisplayField>
        <errorMessage>Não é possível alterar um checklist de visita com o Status Encerrado.</errorMessage>
    </validationRules>
</CustomObject>